# Nitrogen-Electron

./: .gitignore  CMakeLists.txt  README.md  future-improvements-temp.md  index.html  main.js  mock-fs.json  package-lock.json  package.json  preload.cjs  server.ts  vite.config.ts
RULES/: Architecture-to-Package.md  FIle-Rules.md  File-Tree-Structure.md  Optimization-State.md  Optimizations.md  Plan.md  Plugin-Architecture-Vision.md  Progress.md
Temporary-UI-folder/extracted/: README.md  metadata.json  package-lock.json  package.json
Temporary-UI-folder/extracted/src/: App.tsx  index.css
Temporary-UI-folder/extracted/src/components/: Tabs.tsx  TopBar.tsx
scripts/: ram-usages.sh
src/: index.css  store.ts  vite-env.d.ts
src/components/: CommandPalette.tsx  Editor.tsx  Sidebar.tsx  StatusBar.tsx  Terminal.tsx  TopBar.tsx
src/core/bridge/: file_explorer_bridge.cpp  search_bridge.cpp  terminal_bridge.cpp
src/core/document/text_buffer/: piece_table.cpp  piece_table.hpp
src/core/file_system/: file_explorer.cpp  file_explorer.hpp  file_node.hpp
src/core/search/: search_engine.cpp  search_engine.hpp
src/core/state/: store.ts  types.ts
src/core/state/slices/: editor_slice.ts  explorer_slice.ts  ui_slice.ts
src/core/state/utils/: tree_helpers.ts
src/core/terminal/: terminal_session.cpp  terminal_session.hpp
src/main/ipc/: file_content.js  file_operations.js
src/ui/: app.tsx  main.tsx  vite-env.d.ts
src/ui/command_palette/: command_palette.tsx
src/ui/commands/: quick_open.tsx
src/ui/commands/hooks/: use_quick_open_logic.ts
src/ui/editor/: editor.tsx  editor_group.tsx
src/ui/editor/components/: breadcrumb_popup.tsx  breadcrumbs.tsx  empty_editor.tsx
src/ui/editor/hooks/: use_breadcrumbs_logic.ts  use_editor_actions.ts  use_editor_logic.ts  use_editor_shortcuts.ts  use_editor_theme.ts
src/ui/editor/utils/: language_map.ts
src/ui/hooks/: use_global_shortcuts.ts
src/ui/sidebar/: bulk_confirm_modal.tsx  sidebar.tsx
src/ui/sidebar/components/: empty_sidebar.tsx  file_row.tsx  input_field.tsx  new_input_row.tsx  root_folder.tsx  search_panel.tsx  sidebar_footer.tsx  sidebar_header.tsx  sticky_root.tsx
src/ui/sidebar/context_menu/: context_menu.tsx
src/ui/sidebar/hooks/: use_sidebar_creation.ts  use_sidebar_keyboard_nav.ts  use_sidebar_navigation.ts  use_sidebar_shortcuts.ts  use_sidebar_virtualization.ts
src/ui/sidebar/logic/: use_sidebar_logic.ts
src/ui/sidebar/utils/: icon_utils.tsx  sidebar_utils.tsx
src/ui/status_bar/: status_bar.tsx
src/ui/status_bar/components/: module_a_language.tsx  module_b_indentation.tsx  module_c_fast_travel.tsx  module_d_git_sync.tsx  module_e_ram_monitor.tsx  module_f_format_guard.tsx  module_g_encoding_lock.tsx  module_h_notifications.tsx
src/ui/status_bar/hooks/: use_status_bar_state.ts
src/ui/status_bar/popups/: ram_breakdown.tsx
src/ui/styles/: index.css
src/ui/tabs/: tabs.tsx
src/ui/tabs/components/: tab_item.tsx  tabs_toolbar.tsx
src/ui/tabs/hooks/: use_tabs_logic.ts
src/ui/tabs/utils/: tab_icons.tsx
src/ui/terminal/: terminal.tsx
src/ui/terminal/components/: terminal_header.tsx  terminal_instance.tsx  terminal_sidebar.tsx
src/ui/terminal/hooks/: use_terminal_instance.ts  use_terminal_logic.ts  use_terminal_shortcuts.ts  use_terminal_theme_sync.ts
src/ui/terminal/logic/: use_terminal_logic.ts
src/ui/terminal/utils/: terminal_events.ts  terminal_themes.ts
src/ui/top_bar/: top_bar.tsx
